--- a/RemindMyFriendApp.html
+++ b/RemindMyFriendApp.html
@@ -43,7 +43,7 @@
 					<header>
 						<h2>Hello there.</h2>
 					</header>
-					<p>This app helps to remind things for your friend by setting reminder/alarm for your friend from your smartphone. For instance, You and your are decided to go to badminton by 7 o clock morning, for this you could alarm him on the specified time from this app. Objective
+					<p>This app helps to remind things for your friend by setting reminder/alarm for your friend from your smartphone. For instance, you and your are decided to go to badminton by 7 o clock morning, for this you could alarm him on the specified time from this app. Objective
 					is to keep to do items/actions in flow in day-to-day activities.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
@@ -55,9 +55,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Snapshots 1</h2>
+						<h2>Inputting details</h2>
 					</header>
-					<img src="images/ideas/Remaind them 1.png" width="200"/>
+					<img src="images/ideas/Remaind them 1.png" width="120"/>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -66,26 +66,62 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Snapshots 2</h2>
+						<h2>Reminder sent to Friend mobile</h2>
 					</header>
-					<img src="images/ideas/Remaind them 1.png" width="200"/>
+					<img src="images/ideas/Remind 2.png" width="120"/>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#three" class="button style2 down anchored">Next</a>
 			</section>
 			
+			<div id="three">
+			<h2>Snapshots</h2>
+			<h3>Reminder history</h3>
+				<img src="images/ideas/Remind 3.png" width="180"/><br/><br/><br/>
+				<h3>Reminder response</h3>
+					<img src="images/ideas/Remind 4.png" width="180"/>
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis 
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Pros</h2>
+						<ul>
+<li>Ability to set reminders in others phone.</li>
+<li>Could send reminder in voice or text.</li>
+<li>Can send reminder to multiple contacts in a group. Create or edit groups.</li>
+<li>You will also receive a notification whether the other user has accepted or declined or responded on your reminder. </li>
+						</ul>
 					</header>										
 				</div>
-			</section>
+			</section></div>
 			
+			<h2>Other project ideas</h2>
+			<ul>
+				<li>
+					Safety Ride.
+				</li>
+				<li>
+					Restrict Electricity consumption.
+				</li>
+				<li>
+					Messaging on lock screen itself.
+				</li>
+				<li>
+					Showing auto status of the caller.
+				</li>
+			</ul>
 			
+			<h2>Other Snapshots</h2>
+			<h3>Restrict Electricity consumption</h3>
+				<img src="images/ideas/reminder.png" width="180"/><br/><br/><br/>
+				<h3>Safety Ride</h3>
+					<img src="images/ideas/saferiding.png" width="180"/><br/><br/><br/>
+					<h3>Tracking Ride</h3>
+					<img src="images/ideas/saferiding1.png" width="180"/><br/>
+					
+					<h2>Profiles</h2>
+					<a href="https://www.linkedin.com/in/shivaprasath">Android Dev</a>
+					<a href="https://in.linkedin.com/in/profileabhishek">UI Dev</a>
+					<a href="https://www.linkedin.com/in/lakshmanmurugesan">Web Dev</a>
 		<!-- Footer -->
 			<footer id="footer">
 				<!-- Menu -->
