--- a/RemindMyFriendApp.html
+++ b/RemindMyFriendApp.html
@@ -43,8 +43,8 @@
 					<header>
 						<h2>Hello there.</h2>
 					</header>
-					<p>This app helps to remind things for your friend by setting reminder/alarm for your friend from your smartphone. For instance, you and your are decided to go to badminton by 7 o clock morning, for this you could alarm him on the specified time from this app. Objective
-					is to keep to do items/actions in flow in day-to-day activities.</p>
+					<p>This app assists to remind things for your friend by setting reminder/alarm for your friend from your smartphone. For instance, you and your are decided to go to badminton by 7 o clock morning, for this you could alarm him on the specified time from this app. Objective
+					is to keep <strong>actions in flow in day-to-day</strong> activities.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -70,17 +70,19 @@
 					</header>
 					<img src="images/ideas/Remind 2.png" width="120"/>
 				</div>
-				<a href="#three" class="button style2 down anchored">Next</a>
+				<a href="#three" class="button style2 down anchored">Next</a><br/>
 			</section>
 			
+			
 			<div id="three">
-			<h2>Snapshots</h2>
+			<div class="format">
+				<br/><h2>Snapshots</h2>
 			<h3>Reminder history</h3>
-				<img src="images/ideas/Remind 3.png" width="180"/><br/><br/><br/>
+				<img src="images/ideas/Remind 3.png" width="180"/><br/>
 				<h3>Reminder response</h3>
-					<img src="images/ideas/Remind 4.png" width="180"/>
+					<img src="images/ideas/Remind 4.png" width="180"/><hr/>
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="work">
 				<div class="content container">
 					<header>
 						<h2>Pros</h2>
@@ -92,36 +94,39 @@
 						</ul>
 					</header>										
 				</div>
-			</section></div>
+			</section><hr/></div></div>
 			
+			<div class="format" id="four">
+				<section id="work">
+				<div class="content container">
 			<h2>Other project ideas</h2>
 			<ul>
 				<li>
-					Safety Ride.
+					Safety Ride.<br/>
+						<img src="images/ideas/saferiding.png" width="180"/>
 				</li>
 				<li>
-					Restrict Electricity consumption.
+					Restrict Electricity consumption.<br/>
+					<img src="images/ideas/reminder.png" width="180"/>
 				</li>
 				<li>
-					Messaging on lock screen itself.
+					Real time tracking.<br/>
+					<img src="images/ideas/saferiding1.png" width="180"/>
 				</li>
 				<li>
-					Showing auto status of the caller.
+					Messaging on lock screen itself.<br/>
 				</li>
-			</ul>
-			
-			<h2>Other Snapshots</h2>
-			<h3>Restrict Electricity consumption</h3>
-				<img src="images/ideas/reminder.png" width="180"/><br/><br/><br/>
-				<h3>Safety Ride</h3>
-					<img src="images/ideas/saferiding.png" width="180"/><br/><br/><br/>
-					<h3>Tracking Ride</h3>
-					<img src="images/ideas/saferiding1.png" width="180"/><br/>
+				<li>
+					Showing auto status of the caller.<br/>
+				</li>
+			</ul><hr/>
 					
+					<div class="profile">
 					<h2>Profiles</h2>
 					<a href="https://www.linkedin.com/in/shivaprasath">Android Dev</a>
 					<a href="https://in.linkedin.com/in/profileabhishek">UI Dev</a>
-					<a href="https://www.linkedin.com/in/lakshmanmurugesan">Web Dev</a>
+					<a href="https://www.linkedin.com/in/lakshmanmurugesan">Web Dev</a></div></div></section>
+		  </div>
 		<!-- Footer -->
 			<footer id="footer">
 				<!-- Menu -->
